[gd_scene load_steps=5 format=3 uid="uid://cxgx5p7j582qa"]

[ext_resource type="Script" uid="uid://c6m73b405nhgu" path="res://src/client/upgrade_tab.gd" id="1_2p4h6"]
[ext_resource type="Script" uid="uid://7wqmwairseuh" path="res://src/client/ship_upgrade_ui.gd" id="2_upgrade_ui"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_upgrd"]
bg_color = Color(0.2, 0.2, 0.2, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cs6ob"]
bg_color = Color(0.162066, 0.162066, 0.162065, 1)

[node name="UpgradeTab" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2p4h6")

[node name="ShipUpgradeUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("2_upgrade_ui")

[node name="UpgradeSlotsPanel" type="Panel" parent="ShipUpgradeUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_upgrd")

[node name="TitleLabel" type="Label" parent="ShipUpgradeUI/UpgradeSlotsPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 10.0
offset_right = 75.0
offset_bottom = 36.0
grow_horizontal = 2
text = "Ship Upgrades"
horizontal_alignment = 1

[node name="UpgradeSlotsContainer" type="HBoxContainer" parent="ShipUpgradeUI/UpgradeSlotsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 40.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="UpgradeSelectionPanel" type="Panel" parent="ShipUpgradeUI"]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cs6ob")

[node name="TitleLabel" type="Label" parent="ShipUpgradeUI/UpgradeSelectionPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 10.0
offset_right = 75.0
offset_bottom = 36.0
grow_horizontal = 2
text = "Select Upgrade"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="ShipUpgradeUI/UpgradeSelectionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 40.0
offset_right = -10.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2

[node name="UpgradeList" type="VBoxContainer" parent="ShipUpgradeUI/UpgradeSelectionPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="UpgradeDetails" type="Label" parent="ShipUpgradeUI/UpgradeSelectionPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -50.0
offset_right = -10.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
text = "Select an upgrade to see details"
autowrap_mode = 3

[node name="CloseButton" type="Button" parent="ShipUpgradeUI/UpgradeSelectionPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 30.0
grow_horizontal = 0
text = "X"
